[gd_scene load_steps=10 format=3 uid="uid://c3xvp8l1n2qdo"]

[ext_resource type="Script" uid="uid://dvotyrgk0drth" path="res://scripts/MainMenu.gd" id="1_0x8vq"]
[ext_resource type="Theme" uid="uid://q1nu6v7rdfh2" path="res://themes/main.tres" id="1_qmweu"]
[ext_resource type="Script" uid="uid://dxot7wabfp632" path="res://scripts/effects/Starfield.gd" id="2_axelx"]
[ext_resource type="FontFile" uid="uid://b2g675lsgm11w" path="res://assets/fonts/SFTransRobotics.ttf" id="3_xr86y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qmweu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.1, 0.1, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.8, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.05, 0.05, 0.15, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.6, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f1mbi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oitky"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qmweu")
script = ExtResource("1_0x8vq")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.02, 0.08, 1)

[node name="StarField" type="Control" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_axelx")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -525.0
offset_top = -443.0
offset_right = 525.0
offset_bottom = 443.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Title" type="Label" parent="MainContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_fonts/font = ExtResource("3_xr86y")
theme_override_font_sizes/font_size = 72
text = "CELESTIAL BRIDGE SIMULATOR"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="MainContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.7, 1, 0.8)
theme_override_font_sizes/font_size = 24
text = "To boldly go where no simulation has gone before."
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainContainer"]
layout_mode = 2
theme_override_constants/separation = 75
theme_override_styles/separator = SubResource("StyleBoxEmpty_qmweu")

[node name="ConnectionStatus" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="StatusLabel" type="Label" parent="MainContainer/ConnectionStatus"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Connection Status:"

[node name="StatusValue" type="Label" parent="MainContainer/ConnectionStatus"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
text = "Disconnected"

[node name="ServerContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ServerLabel" type="Label" parent="MainContainer/ServerContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Server:"

[node name="ServerInput" type="LineEdit" parent="MainContainer/ServerContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_colors/selection_color = Color(0.2, 0.6, 1, 0.5)
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_2")
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "ws://localhost:8080/ws"
placeholder_text = "ws://localhost:8080/ws"

[node name="ConnectButton" type="Button" parent="MainContainer/ServerContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Connect"

[node name="HSeparator2" type="HSeparator" parent="MainContainer"]
layout_mode = 2
theme_override_constants/separation = 25
theme_override_styles/separator = SubResource("StyleBoxEmpty_f1mbi")

[node name="StationLabel" type="Label" parent="MainContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.7, 1, 1)
theme_override_font_sizes/font_size = 24
text = "SELECT STATION"
horizontal_alignment = 1

[node name="StationGrid" type="GridContainer" parent="MainContainer"]
layout_mode = 2
columns = 2

[node name="HelmButton" type="Button" parent="MainContainer/StationGrid"]
custom_minimum_size = Vector2(180, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "HELM STATION
Navigation & Flight Control"

[node name="TacticalButton" type="Button" parent="MainContainer/StationGrid"]
custom_minimum_size = Vector2(180, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "TACTICAL STATION
Weapons & Defense Systems"

[node name="CommunicationButton" type="Button" parent="MainContainer/StationGrid"]
custom_minimum_size = Vector2(180, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "COMMUNICATION
Ship-to-Ship Communications"

[node name="LogisticsButton" type="Button" parent="MainContainer/StationGrid"]
custom_minimum_size = Vector2(180, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "LOGISTICS STATION
Power & Resource Management"

[node name="CaptainButton" type="Button" parent="MainContainer/StationGrid"]
custom_minimum_size = Vector2(180, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "CAPTAIN STATION
Command & Control"

[node name="GameMasterButton" type="Button" parent="MainContainer/StationGrid"]
custom_minimum_size = Vector2(180, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "GAME MASTER
Mission Control & Admin"

[node name="ViewscreenButton" type="Button" parent="MainContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "3D VIEWSCREEN
External Ship View"

[node name="HSeparator3" type="HSeparator" parent="MainContainer"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_oitky")

[node name="BottomContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
alignment = 1

[node name="SettingsButton" type="Button" parent="MainContainer/BottomContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Settings"

[node name="ExitButton" type="Button" parent="MainContainer/BottomContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_hover_color = Color(1, 0.6, 0.6, 1)
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Exit"
